syntax = "proto3";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";


message EventRequest {
  google.protobuf.Timestamp actionTimestamp = 1;
  string serviceName = 2;
  int64 userId = 3;
  enum ActionType {
    CREATE = 0;
    DELETE = 1;
    GET = 2;
    UPDATE = 3;
    HEAD = 4;
    PATCH = 5;
    PUT = 6;
    TRACE = 7;
    POST = 8;
    OPTIONS = 9;
  }
  ActionType actionType = 4;
  string resourceName = 5;
  enum ResponseType {
    Success = 0;
    Failure = 1;
  }
  ResponseType responseType = 6;
}

message EventResponse {
  string eventResponseText = 1;
}

service EventsService {
  rpc hello(EventRequest) returns (EventResponse);
}